--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html lang="ja">
+   <head>
+     <meta charset="UTF-8">
+     <link rel="stylesheet" type="text/css" href="css/default.css">
+     <title>練習９</title>
+  </head>
+  <body>
+    <h1>text-shadow</h1>
+    <u1 id="text-shadow">
+      <li class="drop_shadow">DropShadow</li>
+      <li class="grow">Growth</li>
+      <li class="bebel">SOARA</li>
+      <li class="embos">エボス</li>
+      <li class="neon">ネオン</li>
+    </u1>
+  </body>
