--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       <li class="embos">エボス</li>
       <li class="neon">ネオン</li>
     </u1>
-     <h1>ボーダー</h1>
-     <u1 id="border-radius">
-        <li class="boeder-radiusu-one">1つ</li>
-        <li class="boeder-radiusu-two">2つ</li>
-        <li class="boeder-radiusu-three">3つ</li>
-        <li class="boeder-radiusu-four">4つ</li>
+     <h1>ボックス</h1>
+     <u1 id="box-shadow">
+        <li class="box-drop_shadow">ドロップ</li>
+        <li class="box-grow">Growth</li>
+        <li class="box-inset_drop_shadow">インステ</li>
+        <li class="box-multi_shadow">ＳＯＡＲＡ</li>
      </u1>
   </body>
