--- a/index.html
+++ b/index.html
@@ -21,4 +21,5 @@
         <li class="box-inset_drop_shadow">インステ</li>
         <li class="box-multi_shadow">ＳＯＡＲＡ</li>
      </u1>
+     <li class="button">ボタン</li>
   </body>
