--- a/index.html
+++ b/index.html
@@ -22,4 +22,18 @@
         <li class="box-multi_shadow">ＳＯＡＲＡ</li>
      </u1>
      <li class="button">ボタン</li>
+     
+     <h1>トラッシュフォーム</h1>
+     <u1>
+     <li class="transform translateX">XXXXXXXXXXXX</li>
+     <li class="transform translateY">YYYYYYYYYYYY</li>
+     <li class="transform translate">translate</li>
+     <li class="transform scale">scale</li>
+     <li class="transform scaleY">YYY</li>
+     <li class="transform rotate">rotate</li>
+     <li class="transform skewX">XXXXX</li>
+     <li class="transform skewY">YYYYY</li>
+     <li class="transform skew">skew</li>
+     <li class="transform transform-origin">( *´艸｀)</li>
+     </u1>
   </body>
