--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
      
      <h1>トラッシュフォーム</h1>
      <u1>
-     <li class="transform translateX">XXXXXXXXXXXX</li>
-     <li class="transform translateY">YYYYYYYYYYYY</li>
-     <li class="transform translate">translate</li>
-     <li class="transform scale">scale</li>
-     <li class="transform scaleY">YYY</li>
-     <li class="transform rotate">rotate</li>
-     <li class="transform skewX">XXXXX</li>
-     <li class="transform skewY">YYYYY</li>
-     <li class="transform skew">skew</li>
+     <li class="transform translateX">(*´Д｀)</li>
+     <li class="transform translateY">(;´･ω･)</li>
+     <li class="transform translate">Σ(･ω･ﾉ)ﾉ！</li>
+     <li class="transform scale">φ(..)メモメモ</li>
+     <li class="transform scaleY">(/・ω・)/サンチピンチ</li>
+     <li class="transform rotate">(;^ω^)</li>
+     <li class="transform skewX">( ｀ー´)ノ</li>
+     <li class="transform skewY">(*´ω｀*)</li>
+     <li class="transform skew">(V)o￥o(V)</li>
      <li class="transform transform-origin">( *´艸｀)</li>
      </u1>
      <p class="transition"><a href="#">blue</a></p>
